--- a/Front/laboratorio-app/src/app/template/sidebar/sidebar.component.html
+++ b/Front/laboratorio-app/src/app/template/sidebar/sidebar.component.html
@@ -8,13 +8,23 @@
                     Home</a
                 >
                 <div class="sb-sidenav-menu-heading">Cadastros</div>
-                <a class="nav-link collapsed" routerLink="/funcionarioForm" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
-                    ><div class="sb-nav-link-icon"><i class="bi bi-people"></i></div>
+                <a class="nav-link collapsed" 
+                    routerLink="/funcionarioLista" 
+                    data-toggle="collapse" 
+                    data-target="#collapseLayouts" 
+                    aria-expanded="false"
+                    aria-controls="collapseLayouts"
+                ><div class="sb-nav-link-icon"><i class="bi bi-people"></i></div>
                     Funcionários</a
                 >
                 <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                 </div>
-                <a class="nav-link collapsed" routerLink="/examesForm" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages"
+                <a class="nav-link collapsed"
+                    routerLink="/examesForm" 
+                    data-toggle="collapse" 
+                    data-target="#collapsePages" 
+                    aria-expanded="false" 
+                    aria-controls="collapsePages"
                     ><div class="sb-nav-link-icon"><i class="bi bi-eyedropper"></i></div>
                     Exames
                 </a>
