--- a/Front/laboratorio-app/src/app/funcionarios/funcionarios-form/funcionarios-form.component.html
+++ b/Front/laboratorio-app/src/app/funcionarios/funcionarios-form/funcionarios-form.component.html
@@ -4,66 +4,68 @@
 </ol>
 
 <div class="container" >
-  <form #funcionarioForm="ngForm" (ngSubmit)="gravarFuncionario()">
+  <form #funcionarioForm="ngForm" (ngSubmit)="gravarFuncionarios()">
 
     <div class="row">
         <div class="col-md-12">
           <div class="alert alert-success" role="alert" *ngIf="sucesso == true">
               Funcionário fui cadastrado/alterado com sucesso
           </div>
-          <div class="alert alert-success" role="alert" *ngFor="let erro of errosApi">
+          <div class="alert alert-danger"
+                role="alert" *ngFor="let erro of errosApi">
             {{erro}}
           </div>
         </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group col-4">
+        <label for="nome">ID:</label>
+        <input type="text" class="form-control" disabled="true" [(ngModel)]="funcionario.id" name="id">
       </div>
-      <div class="row">
-        <div class="form-group col-4">
-          <label for="nome">ID:</label>
-          <input type="text" class="form-control" disabled="true" [(ngModel)]="funcionario.id" name="id">
-        </div>
 
-        <div class="form-group col-8">
-          <label for="nome">Nome:</label>
-          <input type="text" class="form-control" placeholder="Informe o nome" [(ngModel)]="funcionario.nome" name="nome">
-        </div>
-
-        <div class="form-group col-6">
-          <label for="email">Email:</label>
-          <input type="text" class="form-control" placeholder="Informe email para contato" [(ngModel)]="funcionario.email" name="email">
-        </div>
-
-        <div class="form-group col-6">
-            <label for="cidade">Cidade:</label>
-            <input type="text" class="form-control" placeholder="Cidade aonde reside" [(ngModel)]="funcionario.cidade" name="cidade">
-        </div>
-
-        <div class="form-group col-6">
-            <label for="telefone">Telefone:</label>
-            <input type="text" class="form-control" placeholder="Telefone para contato" id="telefone"  [(ngModel)]="funcionario.telefone" name="telefone">
-        </div>
-          
-        <div class="form-group col-6">
-            <label for="cpf">CPF:</label>
-            <input type="text" class="form-control" placeholder="CPF do funcionário" id="cpf"  [(ngModel)]="funcionario.cpf" name="cpf">
-        </div>
+      <div class="form-group col-8">
+        <label for="nome">Nome:</label>
+        <input type="text" class="form-control" placeholder="Informe o nome" [(ngModel)]="funcionario.nome" name="nome">
       </div>
-      
-      <div class="row">
-        <div class="col-md-4">
-          <button type="submit" class="btn btn-primary" *ngIf="!funcionario.id">
-            <i class="fa fa-save"></i>
-            Salvar
-          </button>
-          <button type="submit" class="btn btn-primary" *ngIf="funcionario.id">
-            <i class="fa fa-save"></i>
-            Atualizar
-          </button>
 
-          <button type="button" class="btn btn-danger ml-1" (click)="voltarParaListagem()">
-            <i class="fa fa-arrow-alt-circle-left"></i>
-            Voltar
-          </button>
-        </div>
+      <div class="form-group col-6">
+        <label for="email">Email:</label>
+        <input type="text" class="form-control" placeholder="Informe email para contato" [(ngModel)]="funcionario.email" name="email">
       </div>
+
+      <div class="form-group col-6">
+          <label for="cidade">Cidade:</label>
+          <input type="text" class="form-control" placeholder="Cidade aonde reside" [(ngModel)]="funcionario.cidade" name="cidade">
+      </div>
+
+      <div class="form-group col-6">
+          <label for="telefone">Telefone:</label>
+          <input type="text" class="form-control" placeholder="Telefone para contato" id="telefone"  [(ngModel)]="funcionario.telefone" name="telefone">
+      </div>
+        
+      <div class="form-group col-6">
+          <label for="cpf">CPF:</label>
+          <input type="text" class="form-control" placeholder="CPF do funcionário" id="cpf"  [(ngModel)]="funcionario.cpf" name="cpf">
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-md-4">
+        <button type="submit" class="btn btn-primary" *ngIf="!funcionario.id">
+          <i class="fa fa-save"></i>
+          Salvar
+        </button>
+        <button type="submit" class="btn btn-primary" *ngIf="funcionario.id">
+          <i class="fa fa-save"></i>
+          Atualizar
+        </button>
+
+        <button type="button" class="btn btn-danger ml-1" (click)="voltarParaListagem()">
+          <i class="fa fa-arrow-alt-circle-left"></i>
+          Voltar
+        </button>
+      </div>
+    </div>
   </form>
 </div>
