--- a/Front/laboratorio-app/src/app/exames/exames-form/exames-form.component.html
+++ b/Front/laboratorio-app/src/app/exames/exames-form/exames-form.component.html
@@ -1,6 +1,6 @@
 <h1 class="mt-4">Cadastro de um novo Exames</h1>
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Informações do Exames</li>
+    <li class="breadcrumb-item active">{{exame.id ? 'Edição' : 'cadastro'}}</li>
 </ol>
 
 <div class="container">
@@ -70,22 +70,29 @@
             </div>
 
             <div class="form-group col-6">
-            <label>Funcionário: </label>
-            <select class="form-control" 
+                <label>Funcionário: </label>
+                <select class="form-control" 
                         [ngModelOptions]="{standalone: true}" 
                         [(ngModel)]="exame.idFuncionario"
-                >
-                <option value="">Selecione..</option>
-                <option *ngFor="let funcionario of funcionarios" [ngValue]="funcionario.id">
+                    >
+                    <option value="">Selecione..</option>
+                    <option *ngFor="let funcionario of funcionarios" [ngValue]="funcionario.id">
                         {{ funcionario.nome }}
                     </option>
-            </select>
+                </select>
             </div>
 
             <div class="row">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-primary m-3">
+                <div class="col-md-12 ml-3">
+                    <button type="submit" class="btn btn-primary" *ngIf="!exame.id">
                         <i class="fa fa-save"></i> Salvar
+                    </button>
+                    <button type="submit" class="btn btn-primary" *ngIf="exame.id">
+                        <i class="fa fa-save"></i> Atualizar
+                    </button>
+
+                    <button type="submit" class="btn btn-danger ml-1" (click)="voltarParaListagem()">
+                        <i class="fa fa-arrow-alt-circle-left"></i> Voltar
                     </button>
                 </div>
             </div>
