--- a/Front/laboratorio-app/src/app/exames/exames-form/exames-form.component.html
+++ b/Front/laboratorio-app/src/app/exames/exames-form/exames-form.component.html
@@ -7,7 +7,7 @@
     <form #form="ngForm" (submit)="onSubmit()">
 
         <div class="row">
-            <div class="com-md-12">
+            <div class="col-md-12">
                 <div class="alert alert-success" role="alert" *ngIf="sucesso == true">
                     Nota Salva/Atualizada com sucesso!
                 </div>
