form de paciente feito

--- a/Front/laboratorio-app/src/app/exames/exames-form/exames-form.component.html
+++ b/Front/laboratorio-app/src/app/exames/exames-form/exames-form.component.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="alert alert-success" role="alert" *ngIf="sucesso == true">
-                    Nota Salva/Atualizada com sucesso!
+                    Exame Salvo/Atualizado com sucesso!
                 </div>
 
                 <div class="alert alert-danger" role="alert" *ngFor="let erro of errosApi">
