--- a/Front/laboratorio-app/src/app/template/sidebar/sidebar.component.html
+++ b/Front/laboratorio-app/src/app/template/sidebar/sidebar.component.html
@@ -28,7 +28,19 @@
                     ><div class="sb-nav-link-icon"><i class="bi bi-eyedropper"></i></div>
                     Exames
                 </a>
-            </div>  
+                <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
+                </div>
+                <a class="nav-link collapsed"
+                    routerLink="/pacientesForm" 
+                    data-toggle="collapse" 
+                    data-target="#collapsePages" 
+                    aria-expanded="false" 
+                    aria-controls="collapsePages"
+                    ><div class="sb-nav-link-icon"><i class="bi bi-person-video"></i></div>
+                    Pacientes
+                </a>
+            </div>
+             
         </div>
         <div class="sb-sidenav-footer">
             <div class="small">Logged in as:</div>
