--- a/Front/laboratorio-app/src/app/paciente/paciente-form/paciente-form.component.html
+++ b/Front/laboratorio-app/src/app/paciente/paciente-form/paciente-form.component.html
@@ -49,14 +49,15 @@
             
             <div class="form-group col-6">
                 <label>Status: </label>
-                    <select class="form-control"
-                            [ngModelOptions]="{standalone: true}"
-                            [(ngModel)]="paciente.status" 
-                    >
-                        <option *ngFor="let valor of status" [value]="valor.value">
-                            {{valor.viewValue}}
-                        </option>
-                    </select>
+                <select class="form-control"
+                        [ngModelOptions]="{standalone: true}"
+                        [(ngModel)]="paciente.status" 
+                >
+                <option value="">Selecione...</option>
+                <option *ngFor="let valor of status" [value]="valor.value">
+                    {{valor.viewValue}}
+                </option>
+                </select>
             </div>
             
             <div class="form-group col-6">
@@ -77,6 +78,9 @@
             <div class="col-md-3">
                 <button type="submit" class="btn btn-success">
                     <i class="fa fa-save"></i>Salvar
+                </button>
+                <button type="submit" class="btn btn-danger ml-1" routerLink="/pacientesLista">
+                    <i class="fa fa-arrow-alt-circle-left"></i>Voltar
                 </button>
             </div>
         </div>
