--- a/Front/laboratorio-app/src/app/template/sidebar/sidebar.component.html
+++ b/Front/laboratorio-app/src/app/template/sidebar/sidebar.component.html
@@ -31,7 +31,7 @@
                 <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                 </div>
                 <a class="nav-link collapsed"
-                    routerLink="/pacientesForm" 
+                    routerLink="/pacientesLista" 
                     data-toggle="collapse" 
                     data-target="#collapsePages" 
                     aria-expanded="false" 
