alteração no status view

--- a/Front/laboratorio-app/src/app/paciente/paciente-form/paciente-form.component.html
+++ b/Front/laboratorio-app/src/app/paciente/paciente-form/paciente-form.component.html
@@ -55,7 +55,7 @@
                 >
                 <option value="">Selecione...</option>
                 <option *ngFor="let valor of status" [value]="valor.value">
-                    {{valor.viewValue}}
+                    {{valor.value}}
                 </option>
                 </select>
             </div>
